<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <ImageView
        android:id="@+id/treePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/tree_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registrationText"
            style="@style/Theme.Practice11.LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="22dp"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/add"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/registrationText"
            app:layout_constraintEnd_toStartOf="@+id/registrationText"
            app:layout_constraintTop_toTopOf="@+id/registrationText" />
        <TextView
            android:id="@+id/helpText"
            style="@style/Theme.Practice11.LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="22dp"
            android:text="@string/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationText" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/help"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/helpText"
            app:layout_constraintEnd_toStartOf="@+id/helpText"
            app:layout_constraintTop_toTopOf="@+id/helpText" />
        <TextView
            android:id="@+id/loginText"
            style="@style/Theme.Practice11.LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="22dp"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helpText" />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/user"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/loginText"
            app:layout_constraintEnd_toStartOf="@+id/loginText"
            app:layout_constraintTop_toTopOf="@+id/loginText" />

        <EditText
        android:id="@+id/firstNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="first name"
        android:hint="@string/first_name_field_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treePic" />

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="last name"
        android:hint="@string/last_name_field_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField" />

    <EditText
        android:id="@+id/phoneNumberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:hint="@string/phone_number_field_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameField" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />

    <CheckBox
        android:id="@+id/tosCheckbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tos_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="128dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>