<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">
        <com.aelsi2.practice11.RoundedImageButton
            android:id="@+id/pfp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/tree_pic"
            android:scaleType="fitCenter"
            android:background="@null" />
        <EditText
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/contactsButton"
            android:layout_marginStart="10dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:src="@drawable/user"
            android:scaleType="fitCenter"/>
        <ImageButton
            android:layout_marginStart="3dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/help"
            android:scaleType="fitCenter"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        style="@style/Theme.Practice11.Text"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/greetings"
                        style="@style/Theme.Practice11.Text"/>
            </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_marginStart="12dp"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_marginStart="12dp"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                        </LinearLayout>
                        <Button
                            android:layout_width="100dp"
                            android:layout_height="36dp"
                            android:layout_marginTop="26dp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommendations"
                            android:layout_marginTop="20dp"
                            style="@style/Theme.Practice11.Text"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp">
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_marginStart="12dp"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                                <com.aelsi2.practice11.RandomAvatar
                                    android:layout_marginStart="12dp"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"/>
                        </LinearLayout>
                        <Button
                            android:layout_width="100dp"
                            android:layout_height="36dp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:layout_marginTop="26dp"/>
                        <Button
                            android:layout_width="100dp"
                            android:layout_height="36dp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:layout_marginTop="26dp"/>
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/tree_pic"
                            android:layout_marginTop="26dp"/>
                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_info"
                            style="@style/Theme.Practice11.Text"
                            android:layout_marginTop="9dp"
                            android:layout_marginBottom="24dp"/>
                </LinearLayout>
        </ScrollView>
</LinearLayout>